<!--Patryk Malinowski-->
<!--R00210173-->
<!--HealthAI Android App-->

<resources>
    <string name="app_name">Health AI</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="default_web_client_id">1:560880281833:android:f8718ec5bb471a1d32e878</string>
    <!--    <string name="facebook_app_id"></string>-->
    <!--    <string name="fb_login_protocol_scheme"></string>-->
    <!--    <string name="facebook_client_token"></string>-->
    <!--    <string name="facebook_client_token"></string>-->
    <string name="twitter_api_key">bQjFJk2psqa0R7nYVrGbOxDeT</string>
    <string name="continue_string">Continue</string>
    <string name="enter_date_of_birth">Enter Date of Birth (DD/MM/YYYY)</string>
    <string name="registration">Registration</string>
    <string name="enter_postal_code">Enter Postal Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_insurer_policy_number">Enter Insurer Policy Number</string>
    <string name="enter_insurer_name">Enter Insurer Name</string>
    <string name="forgot_password">After pressing the reset button a password reset email will be sent to you and you will be redirected to the login page.</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="insurance_array">
        <item>Irish Life Health</item>
        <item>Laya Healthcare</item>
        <item>VHI Healthcare</item>
    </string-array>

    <!-- Chest Pain Type -->
    <string-array name="chest_pain_types">
        <item>Typical Angina</item>
        <item>Atypical Angina</item>
        <item>Non-anginal Pain</item>
        <item>Asymptomatic</item>
    </string-array>

    <!-- Fasting Blood Sugar -->
    <string-array name="fasting_blood_sugar_options">
        <item>Greater than 120 mg/dL</item>
        <item>Less than 120 mg/dL</item>
    </string-array>

    <!-- Resting ECG Results -->
    <string-array name="resting_ecg_results">
        <item>Normal</item>
        <item>Having ST-T wave abnormality</item>
        <item>Probable ventricular hypertrophy</item>
    </string-array>

    <!-- Exercise-induced Angina -->
    <string-array name="exercise_induced_angina">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- Slope Of Peak Exercise ST Segment -->
    <string-array name="slope_peak_exercise">
        <item>Upsloping</item>
        <item>Flat</item>
        <item>Downsloping</item>
    </string-array>

    <!-- Thalassemia -->
    <string-array name="thalassemia_types">
        <item>Normal</item>
        <item>Fixed Defect</item>
        <item>Reversible Defect</item>
    </string-array>

    <string name="select_insurer">Select Insurer</string>
    <string name="select_gender">Select Gender</string>
    <string name="select">Select</string>
    <string name="verify_email">Please verify your email after which you will be able to continue.</string>
    <string name="my_details">My Details</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="passwords_match">Confirm password must match</string>
    <string name="minimum_one_special_symbol">Minimum one special symbol</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="minimum_one_number">Minimum one number</string>
    <string name="minimum_10_characters">Minimum 10 characters</string>
    <string name="password_must_be">Password must be</string>
    <string name="chatbot_heading">Welcome to HealthAI Chatbot, powered by OpenAI\'s chatGPT!</string>
    <string name="chatbot_hint">Type your message here...</string>
    <string name="ratings_button_text">Submit</string>
    <string name="ratings_review_text">Review</string>
    <string name="ratings_multiline_text">I enjoyed the user interface.</string>
    <string name="ratings_rating_text">Rating</string>
    <string name="ratings_emailhint_text">JohnDoe@gmail.com</string>
    <string name="ratings_email_text">Email Address:</string>
    <string name="ratings_name_text">John Doe</string>
    <string name="ratings_fullname_text">Full Name:</string>
    <string name="ratings_rateus_text">Rate Us</string>

    <string name="editText1_text">The Average radius of the tumour</string>
    <string name="editText2_text">The Average tissue density of the breast tissue on the mammogram</string>
    <string name="editText3_text">The Average perimeter of the tumour</string>
    <string name="editText4_text">The Average area of the tumour</string>
    <string name="editText5_text">The Average smoothness of the skin above the tumour</string>
    <string name="editText6_text">The Average compactness/density of the tumour cells</string>
    <string name="editText7_text">The Average curvature of the tumour</string>
    <string name="editText8_text">The Average number of concave points in relation to image processing</string>
    <string name="editText9_text">Text for EditText 9</string>

</resources>
