<?xml version="1.0" encoding="utf-8"?>
<!--Patryk Malinowski-->
<!--R00210173-->
<!--HealthAI Android App-->

<!-- ConstraintLayout is the root layout for this activity -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity3">

    <!-- First Name TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutInsuranceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrationHeading">

        <!-- First Name TextInputLayout -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInsuranceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_insurer_name"
            android:inputType="textEmailAddress"

            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- First Name TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPolicyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutInsuranceName">


        <!-- Last Name TextInputEditText -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPolicyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_insurer_policy_number"
            android:inputType="textEmailAddress"

            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Continue Button -->
    <Button
        android:id="@+id/buttonContinueRegistration"
        android:layout_width="319dp"
        android:layout_height="68dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#dcdcdc"
        android:enabled="false"
        android:text="@string/continue_string"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textViewAlreadyHaveAnAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- "Already Have An Account?" TextView -->
    <TextView
        android:id="@+id/textViewAlreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/already_have_an_account_login_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Registration heading/title on top of page TextView -->
    <TextView
        android:id="@+id/textViewRegistrationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registration"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>