<?xml version="1.0" encoding="utf-8"?>
<!--Patryk Malinowski-->
<!--R00210173-->
<!--HealthAI Android App-->

<!-- ConstraintLayout is the root layout for the activity -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panel_gradient"
    tools:context=".LoginActivity">


    <!-- Login button -->


    <!-- Company Logo ImageView -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="319dp"
        android:layout_height="68dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#dcdcdc"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />


    <!-- Email address TextInputLayout -->


    <!-- Password TextInputLayout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="290dp"
        android:layout_height="262dp"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewCompanyLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/healthai_logo_transparent_cropped" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="42dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="0dp">


        <!-- Email address EditText -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="42dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailAddress"
        app:passwordToggleEnabled="true">


        <!-- Password EditText -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- This TextView is used to display the text "Don't have an account? Sign up" -->
    <TextView
        android:id="@+id/textViewDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <!-- This TextView is used to display the text "Forgot Password?" -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <!--Google sign in button -->


    <!--Twitter sign in button -->
    <ImageButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/google_logo"
        app:layout_constraintBottom_toBottomOf="@+id/twitter_sign_in_button"
        app:layout_constraintEnd_toStartOf="@+id/twitter_sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/twitter_sign_in_button" />

    <!--Facebook sign in button -->
    <ImageButton
        android:id="@+id/twitter_sign_in_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/twitter_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDontHaveAccount" />

    <ImageButton
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/facebook_logo"
        app:layout_constraintBottom_toBottomOf="@+id/twitter_sign_in_button"
        app:layout_constraintStart_toEndOf="@+id/twitter_sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/twitter_sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>